--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
+  /* i deleted padding cause it was causing problems - Agustin*/
   border: 0;
 }
 
