ref: removed general padding

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,7 +1,6 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
   border: 0;
 }
 
@@ -12,16 +11,18 @@ a {
   font-size: inherit;
 }
 
-h1, h2, h3, h4, h5, h6, p, span, a, strong, blockquote, i, b, u, em {
+h1, h2, h3, h4, h5, h6, p, span, a, strong, blockquote, i, b, u, em, ul {
   font-size: 1em;
   font-weight: inherit;
   font-style: inherit;
   text-decoration: none;
   color: inherit;
+  padding: 0;
 }
 
 li {
   list-style-type: none;
+  padding: 0;
 }
 
 body {
