feat: added terminologies to i18n

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,3 +28,13 @@ li {
 body {
   font-family: sans-serif;
 }
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
